--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "next": "12.0.7",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "saas": "^1.0.0"
   },
   "devDependencies": {
