--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
