--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
+    "markdown-it": "^12.3.0",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
