connected authentication with a strapi and getting a jwt token

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "knex": "0.21.18",
     "sqlite3": "5.0.0",
@@ -20,6 +19,7 @@
     "strapi-plugin-content-type-builder": "3.6.8",
     "strapi-plugin-email": "3.6.8",
     "strapi-plugin-i18n": "3.6.8",
+    "strapi-plugin-magic": "^0.9.0",
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-utils": "3.6.8"
