connected adding bookmarks to redux and the server

--- a/server/extensions/users-permissions/models/User.settings.json
+++ b/server/extensions/users-permissions/models/User.settings.json
@@ -59,8 +59,8 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "posts": {
-      "collection": "post"
+    "bookmarks": {
+      "type": "json"
     }
   }
 }
